[package]
name = "hbox"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "CLI tool that leverages container technology to manage packages."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
atty = "0.2.14"
shellexpand = "3.1.0"